Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/UGameUserSettings.h

	DOTNET_EXPORT auto E_PROP_UGameUserSettings_bUseDynamicResolution_GET(UGameUserSettings* Ptr) { return Ptr->bUseDynamicResolution; }
	DOTNET_EXPORT void E_PROP_UGameUserSettings_bUseDynamicResolution_SET(UGameUserSettings* Ptr, bool Value) { Ptr->bUseDynamicResolution = Value; }
	
	DOTNET_EXPORT auto E_PROP_UGameUserSettings_bUseVSync_GET(UGameUserSettings* Ptr) { return Ptr->bUseVSync; }
	DOTNET_EXPORT void E_PROP_UGameUserSettings_bUseVSync_SET(UGameUserSettings* Ptr, bool Value) { Ptr->bUseVSync = Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_UGameUserSettings(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<UGameUserSettings>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}
	DOTNET_EXPORT auto E_UGameUserSettings_ApplyHardwareBenchmarkResults(UGameUserSettings* Self)
	{
		Self->ApplyHardwareBenchmarkResults();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_ApplyNonResolutionSettings(UGameUserSettings* Self)
	{
		Self->ApplyNonResolutionSettings();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_ApplyResolutionSettings(UGameUserSettings* Self, bool bCheckForCommandLineOverrides)
	{
		auto _p0 = bCheckForCommandLineOverrides;
		Self->ApplyResolutionSettings(_p0);
	}
	DOTNET_EXPORT auto E_UGameUserSettings_ApplySettings(UGameUserSettings* Self, bool bCheckForCommandLineOverrides)
	{
		auto _p0 = bCheckForCommandLineOverrides;
		Self->ApplySettings(_p0);
	}
	DOTNET_EXPORT auto E_UGameUserSettings_ConfirmVideoMode(UGameUserSettings* Self)
	{
		Self->ConfirmVideoMode();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_EnableHDRDisplayOutput(UGameUserSettings* Self, bool bEnable, int32 DisplayNits)
	{
		auto _p0 = bEnable;
		auto _p1 = DisplayNits;
		Self->EnableHDRDisplayOutput(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UGameUserSettings_FindResolutionQualityForScreenSize(UGameUserSettings* Self, float Width, float Height)
	{
		auto _p0 = Width;
		auto _p1 = Height;
		return ((E_PROTECTED_WRAP_UGameUserSettings*)Self)->FindResolutionQualityForScreenSize_WRAP(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetAntiAliasingQuality(UGameUserSettings* Self)
	{
		return Self->GetAntiAliasingQuality();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetAudioQualityLevel(UGameUserSettings* Self)
	{
		return Self->GetAudioQualityLevel();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetCurrentHDRDisplayNits(UGameUserSettings* Self)
	{
		return Self->GetCurrentHDRDisplayNits();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetDefaultResolution(UGameUserSettings* Self)
	{
		return (INT_PTR) new FIntPoint(Self->GetDefaultResolution());
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetDefaultResolutionScale(UGameUserSettings* Self)
	{
		return Self->GetDefaultResolutionScale();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetDefaultWindowPosition(UGameUserSettings* Self)
	{
		return (INT_PTR) new FIntPoint(Self->GetDefaultWindowPosition());
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetDesktopResolution(UGameUserSettings* Self)
	{
		return (INT_PTR) new FIntPoint(Self->GetDesktopResolution());
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetEffectiveFrameRateLimit(UGameUserSettings* Self)
	{
		return ((E_PROTECTED_WRAP_UGameUserSettings*)Self)->GetEffectiveFrameRateLimit_WRAP();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetFoliageQuality(UGameUserSettings* Self)
	{
		return Self->GetFoliageQuality();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetFrameRateLimit(UGameUserSettings* Self)
	{
		return Self->GetFrameRateLimit();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetGameUserSettings(UGameUserSettings* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetGameUserSettings());
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetLastConfirmedScreenResolution(UGameUserSettings* Self)
	{
		return (INT_PTR) new FIntPoint(Self->GetLastConfirmedScreenResolution());
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetLastCPUBenchmarkResult(UGameUserSettings* Self)
	{
		return Self->GetLastCPUBenchmarkResult();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetLastGPUBenchmarkResult(UGameUserSettings* Self)
	{
		return Self->GetLastGPUBenchmarkResult();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetOverallScalabilityLevel(UGameUserSettings* Self)
	{
		return Self->GetOverallScalabilityLevel();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetPostProcessingQuality(UGameUserSettings* Self)
	{
		return Self->GetPostProcessingQuality();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetRecommendedResolutionScale(UGameUserSettings* Self)
	{
		return Self->GetRecommendedResolutionScale();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetResolutionScaleInformation(UGameUserSettings* Self, float CurrentScaleNormalized, int32 CurrentScaleValue, int32 MinScaleValue, int32 MaxScaleValue)
	{
		auto& _p0 = CurrentScaleNormalized;
		auto& _p1 = CurrentScaleValue;
		auto& _p2 = MinScaleValue;
		auto& _p3 = MaxScaleValue;
		Self->GetResolutionScaleInformation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetResolutionScaleInformationEx(UGameUserSettings* Self, float CurrentScaleNormalized, float CurrentScaleValue, float MinScaleValue, float MaxScaleValue)
	{
		auto& _p0 = CurrentScaleNormalized;
		auto& _p1 = CurrentScaleValue;
		auto& _p2 = MinScaleValue;
		auto& _p3 = MaxScaleValue;
		Self->GetResolutionScaleInformationEx(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetScreenResolution(UGameUserSettings* Self)
	{
		return (INT_PTR) new FIntPoint(Self->GetScreenResolution());
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetShadowQuality(UGameUserSettings* Self)
	{
		return Self->GetShadowQuality();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetSyncInterval(UGameUserSettings* Self)
	{
		return Self->GetSyncInterval();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetTextureQuality(UGameUserSettings* Self)
	{
		return Self->GetTextureQuality();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetViewDistanceQuality(UGameUserSettings* Self)
	{
		return Self->GetViewDistanceQuality();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetVisualEffectQuality(UGameUserSettings* Self)
	{
		return Self->GetVisualEffectQuality();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_GetWindowPosition(UGameUserSettings* Self)
	{
		return (INT_PTR) new FIntPoint(Self->GetWindowPosition());
	}
	DOTNET_EXPORT auto E_UGameUserSettings_IsDirty(UGameUserSettings* Self)
	{
		return Self->IsDirty();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_IsDynamicResolutionDirty(UGameUserSettings* Self)
	{
		return Self->IsDynamicResolutionDirty();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_IsDynamicResolutionEnabled(UGameUserSettings* Self)
	{
		return Self->IsDynamicResolutionEnabled();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_IsFullscreenModeDirty(UGameUserSettings* Self)
	{
		return Self->IsFullscreenModeDirty();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_IsHDREnabled(UGameUserSettings* Self)
	{
		return Self->IsHDREnabled();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_IsScreenResolutionDirty(UGameUserSettings* Self)
	{
		return Self->IsScreenResolutionDirty();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_IsVersionValid(UGameUserSettings* Self)
	{
		return ((E_PROTECTED_WRAP_UGameUserSettings*)Self)->IsVersionValid_WRAP();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_IsVSyncDirty(UGameUserSettings* Self)
	{
		return Self->IsVSyncDirty();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_IsVSyncEnabled(UGameUserSettings* Self)
	{
		return Self->IsVSyncEnabled();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_LoadConfigIni(UGameUserSettings* Self, bool bForceReload)
	{
		auto _p0 = bForceReload;
		Self->LoadConfigIni(_p0);
	}
	DOTNET_EXPORT auto E_UGameUserSettings_LoadSettings(UGameUserSettings* Self, bool bForceReload)
	{
		auto _p0 = bForceReload;
		Self->LoadSettings(_p0);
	}
	DOTNET_EXPORT auto E_UGameUserSettings_PreloadResolutionSettings(UGameUserSettings* Self)
	{
		Self->PreloadResolutionSettings();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_RequestUIUpdate(UGameUserSettings* Self)
	{
		Self->RequestUIUpdate();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_ResetToCurrentSettings(UGameUserSettings* Self)
	{
		Self->ResetToCurrentSettings();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_RevertVideoMode(UGameUserSettings* Self)
	{
		Self->RevertVideoMode();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_RunHardwareBenchmark(UGameUserSettings* Self, int32 WorkScale, float CPUMultiplier, float GPUMultiplier)
	{
		auto _p0 = WorkScale;
		auto _p1 = CPUMultiplier;
		auto _p2 = GPUMultiplier;
		Self->RunHardwareBenchmark(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UGameUserSettings_SaveSettings(UGameUserSettings* Self)
	{
		Self->SaveSettings();
	}
	DOTNET_EXPORT auto E_UGameUserSettings_SetAntiAliasingQuality(UGameUserSettings* Self, int32 Value)
	{
		auto _p0 = Value;
		Self->SetAntiAliasingQuality(_p0);
	}
	DOTNET_EXPORT auto E_UGameUserSettings_SetAudioQualityLevel(UGameUserSettings* Self, int32 QualityLevel)
	{
		auto _p0 = QualityLevel;
		Self->SetAudioQualityLevel(_p0);
	}
	DOTNET_EXPORT auto E_UGameUserSettings_SetBenchmarkFallbackValues(UGameUserSettings* Self)
	{
		Self->SetBenchmarkFallbackValues();
	}